Updated foodstuffs to use mobile api
