# api/src/app/resources/openapi.json
@@ -2911,6 +2911,12 @@
               "packSize": {
                 "$ref": "#/components/schemas/Item/properties/packSize"
               },
+              "barcodes": {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              },
               "category": {
                 "type": "string",
                 "example": "Beer"
